# py-blender

./: README.md  const.py  pyproject.toml  script.py  smoothed_airboat.mtl
