[tool.poetry]
name = "py-blender"
version = "0.1.0"
description = "object file im/export script"
authors = ["salahawk <tylermcguy@gmail.com>"]
readme = "README.md"
packages = [{include = "py_blender"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11.dev0"
pywavefront = "^1.3.3"
requests = "^2.31.0"
bpy = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
